# zane

./: .env.example  .gitignore  .gitmodules  .mailmap  CHANGELOG.md  CITATION.cff  CODE_QUALITY_IMPROVEMENTS.md  COMPLETE_ENHANCEMENT_REPORT.md  DOCUMENTATION.md  Dockerfile  FEATURE_UPDATES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  POLYGLOT_ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  ULTRA_SOTA_README.md  UPGRADE_GUIDE.md  approved_drugs_list.txt  dashboard_combo_output.txt  dashboard_output.txt  dashboard_synergy_output.txt  dependency_audit.py  environment.yml  pyproject.toml  pyrightconfig.json  requirements-ci.txt  requirements-dashboard.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  sitecustomize.py  unicorn_platform_orchestrator.py  zane_apex_entrypoint.py
.circleci/: config.yml
.dvc/: config
.venv-1/: pyvenv.cfg
R/: analysis.R
audit/: __init__.py  audit_adapter.py
clinical_intelligence/: post_market_edge.py
compliance/: fda_part11_alcoa.py  privacy_hipaa_gdpr.py  samd_iec62304.py
configs/: config.py  mlflow.yaml
cython/: fingerprints.pyx  setup.py
dashboard/: _xai_surrogate.onnx.data  xai_core.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLIANCE_HARDENING_GUIDE.md  DEPLOYMENT.md  FILE_CATEGORIZATION.md  QUICKSTART.md  drug_discovery_pipeline.md
drug_discovery/: __init__.py  ai_support.py  apex_orchestrator.py  boltzgen_adapter.py  cli.py  cli_extension.py  dashboard.py  external_tooling.py  formulation_simulator.py  glp_tox_panel.py  integrations.py  pipeline.py  polyglot_integration.py
examples/: 2024_breakthroughs.py  admet_prediction.py  continuous_learning.py  simulated_combination_screen.py
external_plugins/: vaccine_trigger_cli.py
infrastructure/: api_gateway.py  ray-cluster.yaml
julia/: Project.toml  molecular_properties.jl
scripts/: bootstrap_and_dashboard.sh  check_dependencies.py  (+4 more)
(+294 files in other folders)
